# launchar

./: .gitignore  CONFIGURE.md  README.md  com.github.user.Hello.json  meson.build
.beautifier/: global.ini
.beautifier/vala/: config.ini  uncrustify.cfg
data/: com.gitlab.abiosoft.launchar.desktop  meson.build
resources/: gresource.xml  meson.build  window.glade
src/: app_entry.vala  config.vala  main.vala  meson.build  window.vala
